# GradeCalculator

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: filemanager.cpp  filemanager.h  gradebook.cpp  gradebook.h  main.cpp  student.cpp  student.h  utils.cpp  utils.h
